--- a/demo.html
+++ b/demo.html
@@ -9,10 +9,26 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;29)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;30)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="im-pulse">
+                
+                </span>
+                <span class="mls"> im-pulse</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e913" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe913;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="im-waveform">
@@ -477,7 +493,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-  </div>
+    </div>
 
     <!--[if gt IE 8]><!-->
     <div class="mhl clearfix mbl">
@@ -489,7 +505,6 @@
         </label>
         <input id="testText" type="text" class="phl size1of1 mvl"
         placeholder="Type some text to test..." value=""/>
-        </label>
         <div id="testDrive" class="im-">&nbsp;
         </div>
     </div>
